@@ -1097,8 +1097,8 @@ ia32e*)		RPMCANONCOLOR=3; RPMCANONARCH=ia32e ;;
 amd64*)		RPMCANONCOLOR=3; RPMCANONARCH=amd64 ;;
 x86_64*)	RPMCANONCOLOR=3; RPMCANONARCH=x86_64 ;;
 alpha*)		RPMCANONCOLOR=0; RPMCANONARCH=alpha ;;
-sparc64*)	RPMCANONCOLOR=0; RPMCANONARCH=sparc64 ;;
-sparc*)		RPMCANONCOLOR=0; RPMCANONARCH=sparc ;;
+sparc64*)	RPMCANONCOLOR=3; RPMCANONARCH=sparc64 ;;
+sparc*)		RPMCANONCOLOR=3; RPMCANONARCH=sparc ;;
 ia64*)		RPMCANONCOLOR=2; RPMCANONARCH=ia64;
 		autorelocate_path='/emul/%%{ARCH}-%%{OS}' ;;
 s390x*)		RPMCANONCOLOR=3; RPMCANONARCH=s390x ;;
