@@ -1,7 +1,7 @@
 #/*! \page config_rpmrc Default configuration: /usr/lib/rpm/rpmrc
 # \verbatim
 #
-# $Id: rpmrc.in,v 2.62 2004/03/28 20:10:54 arekm Exp $
+# $Id: rpmrc.in,v 2.63 2004/05/26 21:10:07 jbj Exp $
 #
 # This is a global RPM configuration file. All changes made here will
 # be lost when the rpm package is upgraded. Any per-system configuration
@@ -86,6 +86,9 @@ arch_canon:	alphaev56: alphaev56	2
 arch_canon:	alphapca56:alphapca56	2
 arch_canon:	alphaev6: alphaev6	2
 arch_canon:	alphaev67: alphaev67	2
+# We always want to prefer sparc to sparc64.
+arch_canon:     sparc64:sparc64 2
+arch_canon:     sun4u:  sparc64 2
 
 arch_canon: 	sparc:	sparc	3
 arch_canon: 	sun4:	sparc	3
@@ -106,8 +109,6 @@ arch_canon:	IP:	sgi	7
 arch_canon:     rs6000:	rs6000  8
 arch_canon:     ia64:	ia64	9
 
-arch_canon:	sparc64:sparc64 10
-arch_canon:	sun4u:	sparc64 10
 arch_canon:	mipsel:	mipsel	11
 
 arch_canon:	armv3l: armv3l	12
@@ -256,6 +257,7 @@ arch_compat: sun4m: sparc
 arch_compat: sun4u: sparc64
 arch_compat: sparc64: sparcv9
 arch_compat: sparcv9: sparc
+arch_compat: sparcv8: sparc
 arch_compat: sparc: noarch
 
 arch_compat: mips: noarch
